--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -2,5 +2,52 @@
 <view class="container">
 	<view class="o_header">
 		<image class="user_tx" src="../../static/images/tx.png"></image>
+		<view class="user_msg">
+			<view class="user_name">张天</view>
+			<view class="fz28 c6">订单状态：维修中</view>
+		</view>
+		<image class="tel_icon" src="../../static/images/tel_03.png"></image>
+	</view>
+	<view class="o_tit">订单信息</view>
+	<view class="o_msg">
+		<view>空调维修</view>
+		<view>空调不制冷,噪音大</view>
+	</view>
+	<view class="o_address">
+		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
+		<view class="fz28">浙江省杭州市滨江区远方科技中心</view>
+	</view>
+	<view class="o_msg1">订单编号：23009495950</view>
+	<view class="o_msg1">下单时间：2017-07-25</view>
+	<view class="order_msg">
+		<view class="scimg_tip">上传现场图片，师傅可以更好的了解您的问题~</view>
+		<view class="imgbox mb40">
+			<view class="addimg1" wx:for="{{imgb}}" 
+					 wx:for-index="idx"
+					 wx:for-item="item"
+					 wx:key="idx"
+					 data-idx="{{idx}}"
+					 bindtap="imgdel">
+				<image  src="{{filter.imgIP(item)}}" data-src="{{filter.imgIP(item)}}"
+					 mode="aspectFill"></image>
+			</view>
+			
+			<view wx:if="{{imgb.length<9}}" class="addimg" bindtap="scpic">
+				
+				<image src="../../static/images/upload_03.jpg"></image>
+			</view>
+		</view>
+	</view>
+	<view class="o_tit">交易信息</view>
+	<view class="o_pjmsg">
+		<view>配件</view>
+		<view>¥50</view>
+	</view>
+	<view class="o_pjmsg">
+		<view>维修费</view>
+		<view>¥80</view>
+	</view>
+	<view class="w100 dis_flex ju_c">
+		<view class="sub_btn">提交</view>
 	</view>
 </view>
