--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -13,8 +13,169 @@
 	box-sizing: border-box;
 	background-color: #fff;
 	margin-bottom: 18rpx;
+	border-top: 1px solid #eee;
 }
 .user_tx{
 	width: 110rpx;
 	height: 110rpx;
+	margin-right: 20rpx;
+}
+.user_msg{
+	flex: 1;
+	height: 76rpx;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.user_name{
+	font-size: 32rpx;
+	color: #333;
+}
+.tel_icon{
+	width: 60rpx;
+	height: 60rpx;
+}
+.o_tit{
+	width: 100%;
+	height: 110rpx;
+	padding-left: 24rpx;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	font-size: 32rpx;
+	font-weight: bold;
+	color: #333333;
+	margin-bottom: 2rpx;
+	background-color: #fff;
+}
+.o_msg{
+	width: 100%;
+	height: 150rpx;
+	padding:34rpx 24rpx;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	font-size: 26rpx;
+	color: #666;
+	margin-bottom: 2rpx;
+	background-color: #fff;
+}
+.o_address{
+	width: 100%;
+	height: 110rpx;
+	padding-left: 24rpx;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	font-size: 28rpx;
+	color: #999999;
+	display: flex;
+	align-items: center;
+	background-color: #fff;
+	margin-bottom: 18rpx;
+}
+.o_address text{
+	font-size: 36rpx;
+	color: #999;
+	margin-right: 20rpx;
+}
+
+.o_msg1{
+	width: 100%;
+	height: 110rpx;
+	padding:0 24rpx;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	font-size: 28rpx;
+	color: #666666;
+	margin-bottom: 2rpx;
+	background-color: #fff;
+}
+.order_msg{
+	width: 100%;
+	padding: 0 20rpx;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	background-color: #fff;
+	border-radius: 10rpx;
+	box-shadow: 0px 1px 3px 0px 
+		rgba(153, 153, 153, 0.19);
+	margin-bottom: 18rpx;
+}
+.scimg_tip{
+	font-family: PingFang-SC-Regular;
+	font-size: 24rpx;
+	color: #999999;
+	line-height: 80rpx;
+}
+.imgbox{
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+}
+.addimg{
+	width: 200rpx;
+	height: 200rpx;
+	margin: 20rpx 1.5%;
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+}
+.addimg image{
+	width: 200rpx;
+	height: 200rpx;
+}
+.addimg1{
+	width: 200rpx;
+	height: 200rpx;
+	margin: 20rpx 1.5%;
+}
+.addimg1>image{
+	width: 100%;
+	height: 100%;
+	border-radius: 20rpx;
+}
+.sub_btn{
+	margin-top: 60rpx;
+	width: 480rpx;
+	height: 80rpx;
+	background-image: linear-gradient(90deg, 
+		#59cafe 0%, 
+		#5ebdff 50%, 
+		#63b1ff 100%);
+	border-radius: 40rpx;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: PingFang-SC-Medium;
+	font-size: 28rpx;
+	font-weight: bold;
+	color: #ffffff;
+	margin-bottom: 100rpx;
+}
+.o_pjmsg{
+	display: flex;
+	width: 100%;
+	height: 110rpx;
+	padding: 0 20rpx;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #fff;
+	font-size: 28rpx;
+	color: #666;
+	margin-bottom: 2rpx;
 }
