--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -13,14 +13,14 @@
 			<view class="zc_val">1000.00</view>
 		</view>
 	</view>
-	<view class="my_list" data-url="/pages/orderList/orderList" bindtap="jump">
+	<view class="my_list" data-url="/pages/renzheng/renzheng" bindtap="jump">
 		<view class="list_name">
 			<image class="list_icon" src="../../static/images/my_05.png"></image>
 			身份认证
 		</view>
 		<text class="iconfont iconnext"></text>
 	</view>
-	<view class="my_list" data-url="/pages/myaddress/myaddress" bindtap="jump">
+	<view class="my_list" data-url="/pages/mymoney/mymoney" bindtap="jump">
 		<view class="list_name">
 			<image class="list_icon" src="../../static/images/my_08.png"></image>
 			我的资金
