--- a/app.wxss
+++ b/app.wxss
@@ -60,6 +60,7 @@ page{
 	background-color: #f7f7f7;
 } 
 .container {
+	width: 100%;
 	font-family: MicrosoftYaHei;
   height: 100%;
   display: flex;
@@ -359,4 +360,7 @@ page{
 	font-family: PingFang-SC-Medium;
 	font-size: 28rpx;
 	/* color: #8e8e8e; */
+}
+.hidden{
+	display: none;
 }
