--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -6,7 +6,7 @@
 			<view class="user_name">张天</view>
 			<view class="fz28 c6">订单状态：维修中</view>
 		</view>
-		<image class="tel_icon" src="../../static/images/tel_03.png"></image>
+		<image class="tel_icon" src="../../static/images/tel_03.png"  data-tel="18300000000" bindtap="call"></image>
 	</view>
 	<view class="o_tit">订单信息</view>
 	<view class="o_msg">
@@ -21,7 +21,7 @@
 	<view class="o_msg1">联系方式：18300000000</view>
 	<view class="o_msg1">下单时间：2017-07-25</view>
 	<view class="order_msg">
-		<view class="scimg_tip">上传现场图片，师傅可以更好的了解您的问题~</view>
+		<view class="scimg_tip">到达服务地点，拍照上传，进行定位，确保准确到达~</view>
 		<view class="imgbox mb40">
 			<view class="addimg1" wx:for="{{imgb}}" 
 					 wx:for-index="idx"
@@ -40,6 +40,13 @@
 				<image src="../../static/images/upload_03.jpg"></image>
 			</view>
 		</view>
+	</view>
+	<view class="o_address" bindtap="getLocation">
+		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
+		<view class="fz28">{{activity_location}}</view>
+	</view>
+	<view class="w100 dis_flex ju_c">
+		<view data-type="1" class="sub_btn" bindtap="subfuc1">提交</view>
 	</view>
 	<view class="o_tit">交易信息</view>
 	<view class="o_pjmsg">
@@ -61,6 +68,6 @@
 		<input type="text" name="wxf" placeholder="请输入维修费用"/>
 	</view>
 	<view class="w100 dis_flex ju_c">
-		<view class="sub_btn">提交</view>
+		<view data-type="1" class="sub_btn">提交</view>
 	</view>
 </view>
