--- a/pages/renzheng/renzheng.wxml
+++ b/pages/renzheng/renzheng.wxml
@@ -48,7 +48,7 @@
 			<input type="text" name="shanchang" placeholder="请输入您的擅长"/>
 		</view>
 		<view class="w100 dis_flex ju_c">
-			<button class="sub_btn" form-type="submit">提交</button>
+			<button class="sub_btn" form-type="submit">保存</button>
 		</view>
 	</form>
 </view>
