--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -3,7 +3,8 @@
 <view class="container">
 	<view class="header">
 		<image class="mybg" src="../../static/images/my_02.jpg"></image>
-		<text class="iconfont iconshezhi" data-url="/pages/mymsg/mymsg" bindtap="jump"></text>
+		<!-- <text class="iconfont iconshezhi" data-url="/pages/mymsg/mymsg" bindtap="jump"></text> -->
+		<view class="tx_btn" data-url="/pages/tixian/tixian" bindtap="jump">提现</view>
 		<view class="user_msg">
 			<image class="user_tx" src="../../static/images/tx.png"></image>
 			<text class="user_name">昵称</text>
@@ -11,7 +12,7 @@
 		<view class="user_zc">
 			<view class="zc_name">总资产(元)</view>
 			<view class="zc_val">1000.00</view>
-			<view class="tx_btn" data-url="/pages/tixian/tixian" bindtap="jump">提现</view>
+			
 		</view>
 	</view>
 	<view class="my_list" data-url="/pages/renzheng/renzheng" bindtap="jump">
