--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -109,19 +109,11 @@ page{
 	color: #fff;
 }
 .tx_btn{
-	margin: 0 auto;
-	width: 200rpx;
-	height: 80rpx;
-	border-radius: 40rpx;
-	/* background-image: linear-gradient(90deg, 
-		#59cafe 0%, 
-		#56b7fd 50%, 
-		#53a8fc 100%); */
-		background-color: #53a8fc;
+	position: absolute;
+	top: 26rpx;
+	right: 42rpx;
 	font-family: PingFang-SC-Regular;
 	font-size: 24rpx;
 	color: #ffffff;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	z-index: 10;
 }
