--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -1,25 +1,37 @@
 <!--pages/details/details.wxml-->
+<wxs src="../../utils/filter.wxs" module="filter" />
 <view class="container">
 	<view class="o_header">
-		<image class="user_tx" src="../../static/images/tx.png"></image>
+		<image class="user_tx" src="{{xqData.userpic}}"></image>
 		<view class="user_msg">
-			<view class="user_name">张天</view>
-			<view class="fz28 c6">订单状态：维修中</view>
+			<view class="user_name">{{xqData.username}}</view>
+			<view class="fz28 c6">订单状态：{{xqData.statusname}}</view>
 		</view>
 		<image class="tel_icon" src="../../static/images/tel_03.png"  data-tel="18300000000" bindtap="call"></image>
 	</view>
 	<view class="o_tit">订单信息</view>
 	<view class="o_msg">
-		<view>空调维修</view>
-		<view>空调不制冷,噪音大</view>
+		<view class='oh1'>{{xqData.shopgroupname}} {{xqData.shopname}}</view>
+		<view>{{xqData.description}}</view>
+    <view wx:if="{{xqData.pics}}" class="imgbox">
+			<view class="addimg1" wx:for="{{filter.getgimgarr(xqData.pics)}}" 
+					 wx:for-index="idx"
+					 wx:for-item="item"
+					 wx:key="idx"
+					 data-idx="{{idx}}"
+					 bindtap="imgdel">
+				<image  src="{{filter.imgIP(item)}}" data-src="{{filter.imgIP(item)}}"
+					 mode="aspectFill"></image>
+			</view>
+		</view>
 	</view>
 	<view class="o_address">
 		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
-		<view class="fz28">浙江省杭州市滨江区远方科技中心</view>
+		<view class="fz28">{{xqData.address_str}}</view>
 	</view>
-	<view class="o_msg1">订单编号：23009495950</view>
-	<view class="o_msg1">联系方式：18300000000</view>
-	<view class="o_msg1">下单时间：2017-07-25</view>
+	<view class="o_msg1">订单编号：{{xqData.out_trade_no}}</view>
+	<view class="o_msg1">联系方式：{{xqData.address_userphone}}</view>
+	<view wx:if="{{xqData.addtime}}" class="o_msg1">下单时间：{{filter.getTime(xqData.addtime)}}</view>
 	<view class="order_msg">
 		<view class="scimg_tip">到达服务地点，拍照上传，进行定位，确保准确到达~</view>
 		<view class="imgbox mb40">
@@ -29,23 +41,30 @@
 					 wx:key="idx"
 					 data-idx="{{idx}}"
 					 bindtap="imgdel">
-				<!-- <image  src="{{filter.imgIP(item)}}" data-src="{{filter.imgIP(item)}}"
-					 mode="aspectFill"></image> -->
-				<image  src="{{item}}" data-src="{{item}}"
+				<image  src="{{filter.imgIP(item)}}" data-src="{{filter.imgIP(item)}}"
 					 mode="aspectFill"></image>
+				<!-- <image  src="{{item}}" data-src="{{item}}"
+					 mode="aspectFill"></image> -->
 			</view>
 			
-			<view wx:if="{{imgb.length<9}}" class="addimg" bindtap="scpic">
+			<view wx:if="{{xqData.status==1&&imgb.length<9}}" class="addimg" bindtap="scpic">
 				
 				<image src="../../static/images/upload_03.jpg"></image>
 			</view>
 		</view>
 	</view>
-	<view class="o_address" bindtap="getLocation">
+	
+	<view wx:if="{{ldata}}" class="o_address" bindtap="again_getLocation">
 		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
-		<view class="fz28">{{activity_location}}</view>
+		<view class="fz28 ">{{activity_location}}</view>
 	</view>
-	<view class="w100 dis_flex ju_c">
+	<view wx:else class="o_address">
+		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
+		<view class="fz28 ">{{activity_location}}</view>
+    <button open-type="openSetting" bindopensetting='handler'>点击授权并获取位置信息</button>
+	</view>
+  
+	<view wx:if="{{xqData.status==1}}" class="w100 dis_flex ju_c">
 		<view data-type="1" class="sub_btn" bindtap="subfuc1">提交</view>
 	</view>
 	<view class="o_tit">交易信息</view>
