--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -52,7 +52,7 @@
 }
 .o_msg{
 	width: 100%;
-	height: 150rpx;
+	min-height: 150rpx;
 	padding:34rpx 24rpx;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -64,6 +64,16 @@
 	color: #666;
 	margin-bottom: 2rpx;
 	background-color: #fff;
+}
+.addimg1{
+  width: 200rpx;
+  height: 200rpx;
+  margin-right: 20rpx;
+  margin-bottom: 20rpx;  
+}
+.addimg1 image{
+  width: 100%;
+  height: 100%;
 }
 .o_address{
 	width: 100%;
@@ -80,6 +90,15 @@
 	margin-bottom: 18rpx;
 	box-shadow: 0px 1px 3px 0px 
 		rgba(153, 153, 153, 0.19);
+  position:relative;
+}
+.o_address button{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
 .o_address text{
 	font-size: 36rpx;
