--- a/pages/orderList/orderList.wxss
+++ b/pages/orderList/orderList.wxss
@@ -37,7 +37,7 @@
 }
 .rw_one{
 	width: 100%;
-	height: 256rpx;
+	/* height: 256rpx; */
 	padding: 20rpx 14rpx;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
