--- a/pages/renzheng/renzheng.wxml
+++ b/pages/renzheng/renzheng.wxml
@@ -1,48 +1,53 @@
 <!--pages/renzheng/renzheng.wxml-->
-<view class="container">
-	<form bindsubmit="formSubmit" class="rz_form">
-		<view class="rz_box">
-			<view class="rz_name">姓名</view>
-			<text class="mr20 fz28">:</text>
-			<input type="text" name="name" placeholder="请输入您的真实姓名"/>
-		</view>
-		<view class="rz_box">
-			<view class="rz_name">性别</view>
-			<text class="mr20 fz28">:</text>
-			<view class="sexbox" data-sex="1" bindtap="sexfuc">
-				<view class="sex_k">
-					<view wx:if="{{sex==1}}" class="sex_n"></view>
-				</view>
-				男
-			</view>
-			<view class="sexbox" data-sex="2" bindtap="sexfuc">
-				<view class="sex_k">
-					<view wx:if="{{sex==2}}" class="sex_n"></view>
-				</view>
-				女
-			</view>
-			<input class="hidden" type="text" name="sex" value="{{sex}}" />
-			<!-- <input type="text" name="name" placeholder="请输入您的真实姓名"/> -->
-		</view>
-		<view class="rz_box">
-			<view class="rz_name">手机号</view>
-			<text class="mr20 fz28">:</text>
-			<input type="text" name="tel" bindblur='oniptblur' placeholder="请输入您的手机号"/>
-		</view>
-		<view class="rz_box">
-			<view class="rz_name">手机验证码</view>
-			<text class="mr20 fz28">:</text>
-			<input type="text"  name="code" placeholder="请输入手机验证码"/>
-			<!-- <view class="getcode">获取验证码</view> -->
-			<view wx:if="{{setstate==0}}" class="getcode" bindtap="getcode">获取验证码</view>
-			<view wx:if="{{setstate==1}}" class="getcode">{{time}}s</view><!-- 后重新获取 -->
-		</view>
-		<view class="rz_box">
-			<view class="rz_name">身份证号</view>
-			<text class="mr20 fz28">:</text>
-			<input type="text" name="carid" placeholder="请输入您的身份证号"/>
-		</view>
-		<!-- <view class="rz_box1">
+<form bindsubmit="formSubmit" class="rz_form">
+  <view class="container">
+    <view class="rz_box">
+      <view class="rz_name">姓名</view>
+      <text class="mr20 fz28">:</text>
+      <input wx:if="{{!member.RealName}}" type="text" name="name" maxlength='6' placeholder="请输入您的真实姓名" />
+      <input wx:if="{{member.RealName}}" disabled='' value='{{member.RealName}}' />
+    </view>
+    <view class="rz_box">
+      <view class="rz_name">性别</view>
+      <text class="mr20 fz28">:</text>
+      <view class="fz28" wx:if="{{member.RealName}}">{{member.Sex==1? '男':'女'}}</view>
+      <view wx:if="{{!member.RealName}}" class="sexbox" data-sex="1" bindtap="sexfuc">
+        <view class="sex_k">
+          <view wx:if="{{sex==1}}" class="sex_n"></view>
+        </view>
+
+      </view>
+      <view wx:if="{{!member.RealName}}" class="sexbox" data-sex="2" bindtap="sexfuc">
+        <view class="sex_k">
+          <view wx:if="{{sex==2}}" class="sex_n"></view>
+        </view>
+        女
+      </view>
+      <input class="hidden" type="text" name="sex" value="{{sex}}" />
+      <!-- <input type="text" name="name" placeholder="请输入您的真实姓名"/> -->
+    </view>
+    <view class="rz_box">
+      <view class="rz_name">手机号</view>
+      <text class="mr20 fz28">:</text>
+      <input wx:if="{{!member.RealName}}" type="text" name="tel" bindblur='oniptblur' placeholder="请输入您的手机号" />
+      <input wx:if="{{member.RealName}}" disabled value='{{member.Phone}}' />
+    </view>
+    <view wx:if="{{!member.RealName}}" class="rz_box">
+      <view class="rz_name">手机验证码</view>
+      <text class="mr20 fz28">:</text>
+      <input type="text" name="code" placeholder="请输入手机验证码" />
+      <!-- <view class="getcode">获取验证码</view> -->
+      <view wx:if="{{setstate==0}}" class="getcode" bindtap="getcode">获取验证码</view>
+      <view wx:if="{{setstate==1}}" class="getcode">{{time}}s</view>
+      <!-- 后重新获取 -->
+    </view>
+    <view class="rz_box">
+      <view class="rz_name">身份证号</view>
+      <text class="mr20 fz28">:</text>
+      <input wx:if="{{!member.RealName}}" type="text" name="carid" placeholder="请输入您的身份证号" />
+      <input wx:if="{{member.RealName}}" disabled value='{{member.IdCard}}' />
+    </view>
+    <!-- <view class="rz_box1">
 			<view class="rz_name">擅长</view>
 			<text class="mr20 fz28">:</text>
 			<checkbox-group bindchange="checkboxChange" class="shanchang">
@@ -54,15 +59,20 @@
 				</label>
 			</checkbox-group>
 		</view> -->
-		<picker class="w100" bindchange="bindPickerChange" value="{{index}}" range="{{items}}" range-key="value">
-			<view class="rz_box">
-				<view class="rz_name">擅长</view>
-				<text class="mr20 fz28">:</text>
-				<input type="text" name="shanchang" placeholder="请输入您的擅长" value="{{items[index].value}}" disabled=""/>
-			</view>
-		</picker>
-		<view class="w100 dis_flex ju_c">
-			<button class="sub_btn" form-type="submit">保存</button>
-		</view>
-	</form>
-</view>
+    <picker wx:if="{{!member.RealName}}" class="w100" bindchange="bindPickerChange" value="{{index}}" range="{{items}}" range-key="name">
+      <view class="rz_box">
+        <view class="rz_name">擅长</view>
+        <text class="mr20 fz28">:</text>
+        <input placeholder="请输入您的擅长" name="shanchang" value="{{items[index].name}}" disabled="" />
+      </view>
+    </picker>
+    <view wx:if="{{member.RealName}}" class="rz_box">
+      <view class="rz_name">擅长</view>
+      <text class="mr20 fz28">:</text>
+      <input value="{{member.UserSign}}" disabled/>
+    </view>
+    <view wx:if="{{!member.RealName}}" class="w100 dis_flex ju_c">
+      <button class="sub_btn" form-type="submit">保存</button>
+    </view>
+  </view>
+</form>
