--- a/pages/tixian/tixian.wxss
+++ b/pages/tixian/tixian.wxss
@@ -4,21 +4,34 @@
 }
 .tx_box{
 	width: 100%;
-	height: 120rpx;
+	min-height: 120rpx;
 	padding: 0 24rpx;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
 	background-color: #fff;
 	margin-bottom: 2rpx;
 }
 .box_name{
+  height: 120rpx;
 	font-family: PingFang-SC-Medium;
 	font-size: 32rpx;
 	color: #333333;
+  display: flex;
+  align-items: center;
+}
+.skimg{
+  width: 400rpx;
+  height: 400rpx;
+  margin:20rpx 0;
+}
+.scimg{
+  display: flex;
+  align-items: center;
+  height: 120rpx;
 }
 .tx_box1{
 	margin: 0;
@@ -33,6 +46,9 @@
 	background-color: #fff;
 	display: flex;
 	align-items: flex-end;
+}
+.tx_box3{
+  align-items: center;
 }
 .tx_cny{
 	font-size: 43rpx;
