--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -7,11 +7,11 @@
 			<view class="user_name">{{xqData.username}}</view>
 			<view class="fz28 c6">订单状态：{{xqData.statusname}}</view>
 		</view>
-		<image class="tel_icon" src="../../static/images/tel_03.png"  data-tel="18300000000" bindtap="call"></image>
+		<image class="tel_icon" src="../../static/images/tel_03.png"  data-tel="{{xqData.address_userphone}}" bindtap="call"></image>
 	</view>
 	<view class="o_tit">订单信息</view>
 	<view class="o_msg">
-		<view class='oh1'>{{xqData.shopgroupname}} {{xqData.shopname}}</view>
+		<view class='oh1'>{{xqData.shopgroupname}} {{xqData.name}}</view>
 		<view>{{xqData.description}}</view>
     <view wx:if="{{xqData.pics}}" class="imgbox">
 			<view class="addimg1" wx:for="{{filter.getgimgarr(xqData.pics)}}" 
@@ -27,12 +27,26 @@
 	</view>
 	<view class="o_address">
 		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
-		<view class="fz28">{{xqData.address_str}}</view>
+		<view class="fz28 oh1">{{xqData.address_str}}</view>
 	</view>
 	<view class="o_msg1">订单编号：{{xqData.out_trade_no}}</view>
 	<view class="o_msg1">联系方式：{{xqData.address_userphone}}</view>
 	<view wx:if="{{xqData.addtime}}" class="o_msg1">下单时间：{{filter.getTime(xqData.addtime)}}</view>
-	<view class="order_msg">
+	<view wx:if="{{xqData.task_address}}" class="order_msg mt20">
+  	<view class="scimg_tip">到达服务地点，拍照上传，进行定位，确保准确到达~</view>
+    <view  class="imgbox mb40">
+			<view class="addimg1" wx:for="{{filter.getgimgarr(xqData.task_pics)}}" 
+					 wx:for-index="idx"
+					 wx:for-item="item"
+					 wx:key="idx">
+				<image  src="{{filter.imgIP(item)}}" data-src="{{filter.imgIP(item)}}"
+					 mode="aspectFill"></image>
+				<!-- <image  src="{{item}}" data-src="{{item}}"
+					 mode="aspectFill"></image> -->
+			</view>
+		</view>
+	</view>
+  <view wx:else class="order_msg">
 		<view class="scimg_tip">到达服务地点，拍照上传，进行定位，确保准确到达~</view>
 		<view class="imgbox mb40">
 			<view class="addimg1" wx:for="{{imgb}}" 
@@ -52,41 +66,63 @@
 				<image src="../../static/images/upload_03.jpg"></image>
 			</view>
 		</view>
+    
 	</view>
-	
-	<view wx:if="{{ldata}}" class="o_address" bindtap="again_getLocation">
+	<view wx:if="{{xqData.task_address}}" class="o_address">
 		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
-		<view class="fz28 ">{{activity_location}}</view>
+		<view class="fz28 oh1 flex1">{{xqData.task_address}}</view>
 	</view>
-	<view wx:else class="o_address">
-		<text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
-		<view class="fz28 ">{{activity_location}}</view>
-    <button open-type="openSetting" bindopensetting='handler'>点击授权并获取位置信息</button>
-	</view>
+	<view wx:else class='w100'>
+    <view wx:if="{{ldata}}" class="o_address" bindtap="again_getLocation">
+      <text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
+      <view class="fz28 ">{{activity_location}}</view>
+    </view>
+    <view wx:else class="o_address">
+      <text class="iconfont icontubiaozhizuomoban_fuzhi"></text>
+      <view class="fz28 ">{{activity_location}}</view>
+      <button open-type="openSetting" bindopensetting='handler'>点击授权并获取位置信息</button>
+    </view>
+  </view>
   
-	<view wx:if="{{xqData.status==1}}" class="w100 dis_flex ju_c">
+	<view  wx:if="{{!xqData.task_address}}" class="w100 dis_flex ju_c">
 		<view data-type="1" class="sub_btn" bindtap="subfuc1">提交</view>
 	</view>
-	<view class="o_tit">交易信息</view>
-	<view class="o_pjmsg">
-		<view>配件</view>
-		<view>¥50</view>
-	</view>
-	<view class="o_pjmsg">
-		<view>维修费</view>
-		<view>¥80</view>
-	</view>
-	<view class="rz_box">
-		<view class="rz_name">配件</view>
-		<text class="mr20 fz28">:</text>
-		<input type="text" name="pj" placeholder="请输入配件费用"/>
-	</view>
-	<view class="rz_box">
-		<view class="rz_name">维修费</view>
-		<text class="mr20 fz28">:</text>
-		<input type="text" name="wxf" placeholder="请输入维修费用"/>
-	</view>
-	<view class="w100 dis_flex ju_c">
-		<view data-type="1" class="sub_btn">提交</view>
-	</view>
+   <block wx:else>
+    <view class="o_tit">交易信息</view>
+      <block wx:if="{{xqData.status==1}}">
+        <view class="rz_box">
+          <view class="rz_name">配件</view>
+          <text class="mr20 fz28">:</text>
+          <input type="number" name="pj" maxlength='9' placeholder="请输入配件费用" bindblur="price1"/>
+        </view>
+        <view class="rz_box">
+          <view class="rz_name">维修费</view>
+          <text class="mr20 fz28">:</text>
+          <input type="number" name="wxf" maxlength='9' placeholder="请输入维修费用" bindblur="price2"/>
+        </view>
+        <view class="w100 dis_flex ju_c">
+          <view data-type="1" class="sub_btn" bindtap="subfuc2">提交</view>
+        </view>
+      </block>
+      <block wx:else>
+        <view class="o_pjmsg">
+          <view>配件</view>
+          <view>¥{{xqData.price1}}</view>
+        </view>
+        <view class="o_pjmsg">
+          <view>维修费</view>
+          <view>¥{{xqData.price2}}</view>
+        </view>
+        <view class="w100 dis_flex ju_c" wx:if="{{xqData.status==3}}">
+          <view data-type="1" class="sub_btn" bindtap="subfuc3">完成服务</view>
+        </view>
+      </block>
+   </block>
+	
+
+	<!-- <image wx:for="{{img1}}" 
+			wx:for-index="idx1" 
+			wx:for-item="item1" 
+			wx:key="idx1"
+      src='{{item1}}'></image> -->
 </view>
