--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -1,6 +1,8 @@
 /* pages/details/details.wxss */
 .container{
 	width: 100%;
+  padding-bottom: 100rpx;
+  box-sizing: border-box;
 }
 .o_header{
 	width: 100%;
@@ -78,7 +80,7 @@
 .o_address{
 	width: 100%;
 	height: 110rpx;
-	padding-left: 24rpx;
+	padding:0 24rpx;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
