--- a/pages/renzheng/renzheng.wxss
+++ b/pages/renzheng/renzheng.wxss
@@ -1,5 +1,6 @@
 /* pages/renzheng/renzheng.wxss */
 .container{
+  background: #f4f4f4;
 	width: 100%;
 	padding-top: 18rpx;
 	-webkit-box-sizing: border-box;
