--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -34,6 +34,9 @@
 	<view class="o_msg1">订单编号：{{xqData.out_trade_no}}</view>
 	<view class="o_msg1">联系方式：{{xqData.address_userphone}}</view>
 	<view wx:if="{{xqData.addtime}}" class="o_msg1">下单时间：{{filter.getTime(xqData.addtime)}}</view>
+	<view wx:if="{{xqData.yuyuetime}}" class="o_msg1">预约时间：{{filter.getTime(xqData.yuyuetime)}}</view>
+	<view wx:if="{{xqData.shopid!=0}}" class="o_msg1 tosmg"
+    data-url="/pages/details_fw/details?id={{xqData.shopid}}" bindtap='jump'>查看服务信息 <text class='iconfont iconnext tosmg'></text></view>
 	<view wx:if="{{xqData.task_address}}" class="order_msg mt20">
   	<view class="scimg_tip">到达服务地点，拍照上传，进行定位，确保准确到达~</view>
     <view  class="imgbox mb40">
