--- a/pages/renzheng/renzheng.wxss
+++ b/pages/renzheng/renzheng.wxss
@@ -107,6 +107,9 @@
 	font-weight: bold;
 	color: #ffffff;
 	border: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .shanchang{
